--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@mui/x-charts": "^6.18.7",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
